# thai-language-toolkit

./: .env.example  .gitignore  Procfile  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
apps/: streamlit_app.py
apps/tabs/: __init__.py  breakdown_tab.py  flashcards_tab.py  speak_tab.py  tone_game_tab.py
data/: __init__.py  example_flashcards.json  example_flashcards.py  flashcards.json  gender_pronouns.py  pos_labels.py  thai_dict.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/api/breakdown/: route.ts
src/app/api/chat/: route.ts
src/app/api/flashcards/: route.ts
src/app/api/recommendations/: route.ts
src/app/api/stt/: route.ts
src/app/api/tones/: route.ts
src/app/api/tts/: route.ts
src/app/breakdown/: page.tsx
src/app/chat/: page.tsx
src/app/dashboard/: page.tsx
src/app/flashcards/: page.tsx
src/app/login/: page.tsx
src/app/tones/: page.tsx
src/components/: ChatInput.tsx  ChatMessage.tsx  ScenarioSelector.tsx
src/data/: __init__.py
src/lib/: progress.ts  types.ts
src/nlp/: __init__.py  breakdown.py  gender_translation.py  romanize.py
src/speech/: __init__.py  tts.py
src/study/: __init__.py  flashcards.py
src/tlt/: __init__.py
src/tlt/data/: __init__.py  name_transliteration.py  pos_labels.py  thai_dict.py
src/tlt/nlp/: breakdown.py
