[project]
name = "thai-language-toolkit"
version = "0.1.0"
description = "A lightweight toolkit for Thai learners: sentence breakdown, romanization, pronunciation (TTS), flashcards, and a simple tone game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pythainlp[translate]>=5.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "gtts>=2.3.0",
    "numpy>=2.3.3",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "deep-translator>=1.11.4",
    "googletrans==4.0.0rc1",
]
